...
import {HeaderText} from '../../../../sharedComponents/Text/HeaderText';
import {BodyText} from '../../../../sharedComponents/Text/BodyText';

const m = defineMessages({
  button: {
    id: 'screens.AppPasscode.NewPasscode.InputPasscodeScreen.button',
    defaultMessage: 'Next',
  },
  cancel: {
    id: 'screens.AppPasscode.InputPasscodeScreen.cancel',
    defaultMessage: 'Cancel',
  },
});
...
        <HeaderText variant="header1" style={styles.header}>
          {title}
        </HeaderText>
        <BodyText style={styles.subtext}>{subtitle}</BodyText>

        <PasscodeInput
          testID="SETTINGS.passcode-inp"
          error={error}
          ref={inputRef}
          inputValue={inputValue}
          onChangeTextWithValidation={updateInput}
          maskValues={!showPasscodeValues}
        />
...
