...
import {Text} from '../../sharedComponents/Text';
import {Button} from '../../sharedComponents/Button';
import {usePersistedDeviceName} from '../../hooks/persistedState/usePersistedDeviceName';

// these routes are conditionally rendered by react navigation. If the user does not have a deviceName(which is stored in persisted state), they can only see the device naming screens
// According to React Navigation, we are not suppose manually navigate to the map screen(https://reactnavigation.org/docs/auth-flow#dont-manually-navigate-when-conditionally-rendering-screens), the change of deviceName state will handle that
// Therefore this screen only sets the device name in state when the `Go to Map` Button is clicked, therefore changing the state and automatically navigating user to the map screen
// If the user was to close the app before pressing the `Go to Map` button, the device name would not be set, and they would have to do this flow again. The useEeffect function should catch that use case and will set the name in state before closing. When the user opens the app again, the name will be saved, and the user will be navigated to the map screen
export const Success = ({
  route,
}: NativeStackScreenProps<DeviceNamingList, 'Success'>) => {
  const setDeviceName = usePersistedDeviceName(store => store.setDeviceName);
  const deviceName = route.params.deviceName;
...
