...
          )}
        />
        {error && (
          <ErrorIcon
            style={{position: undefined}}
            color={RED}
            testID="error-icon"
          />
        )}
      </View>
      <View style={styles.underContainer}>
        <View>
          {errorMessage && (
...
