appId: com.comapeo.dev
env:
  CAT: MAIN
---
- assertVisible:
    label: 'Hamburger drawer menu visible from main screen'
    id: '${CAT}.drawer-icon'
- tapOn:
    id: '${CAT}.drawer-icon'
- assertVisible:
    label: 'User sees the header stating the following "You are currently mapping on your own"'
    text: '.*You are currently mapping on your own.*'
- tapOn:
    id: '${CAT}.drawer-create-join-txt'
- assertVisible:
    label: 'Menu cannot be closed by clicking anywhere else on the menu screen'
    text: '.*You are currently mapping on your own.*'
- assertVisible:
    label: 'Menu items are all visible in the drawer menu'
    text: '.*Create or Join Project.*'
- assertVisible: '.*Project Settings.*'
- assertVisible: '.*App Settings.*'
- assertVisible: '.*About CoMapeo.*'
- tapOn:
    id: '${CAT}.drawer-icon'
